ModelPreviewScene more resilient (red cube on error), faster texture loading/check in tests